# snakemake-grammar

./: README.md  pyproject.toml
grammar/: snakemake.lark
tests/: test_lark_grammar.py
