[project]
name = "snakemake-grammar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Hall", email = "michael@mbh.sh" }
]
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "lark>=1.2.2",
    "pytest>=8.3.3",
]

